--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,3 @@
-.preloader {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  z-index: 100000;
-  background-color: #E8C9AD;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.preloader img {
-  animation: spin 3s ease;
-  width: 150px;
-}
 
 body{
   font-family: 'Didact Gothic', 'Open Sans', sans-serif;
@@ -22,42 +6,19 @@ body{
   background-repeat: repeat-y;
   margin: 0px;
 }
+a { color: #2E7476; 
+  text-decoration: none;
+  padding: 20px;
+ }
+
+html {
+  scroll-behavior: smooth;
+}
 p{
   font-size: 20px;
   color: #2E7476;
   text-align: justify;
 }
-#heroGrid p{
-  font-size: 30px;
-  color: #2E7476;
-  text-align: left;
-}
-#heroGrid{
-  display: grid;
-  width: 100%;
-  padding-top: 50px;
-  height: calc(100vh - 150px);
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr;
-  grid-template-areas:
-  "flexContainer heroImg"
-}
-.categoryGridAreaTop{
-  text-align: center;
-  justify-content: center;
-}
-.heroImg{
-  align-items: center;
-  grid-area: heroImg;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.heroImg img{
-  width: 75%;
-  min-width: 550px;
-}
-
 h1{
   font-size: 50px;
   font-weight: 200px;
@@ -123,17 +84,7 @@ button{
 }
 
 /*Top Navigation*/
-#fixedHeader{
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  width:100%;
-  z-index:10;
-}
-
 header {
-  display: inline-block;
   width: 100%;
   height: 70px;
   background-color: #e8c9adb9;
@@ -168,208 +119,29 @@ header .floatright {
 }
 
 .logo{
-  display: inline-block;
   width: 20%;
   padding: 1%;
   text-align: center;
 }
-
-/*Left Hero*/
-
-.flexContainer {
-  grid-area: flexContainer;
+/*----------------BODY-----------------*/
+.jumbotron {
+  background-size: contain;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
-  margin: 80px;
-}
-.flexContainer h1{
-  text-align: left;
-  font-size: 70px;
   margin: 0px;
+  padding: 0px;
 }
-.flexContainer h2 {
-  text-align: left;
-  margin: 0px;
-  margin-bottom: 50px;
-}
-.flexContainer h3 {
-  text-align: left;
-  padding-bottom: 14px;
-  margin: 0px;
-}
-
-a { color: #2E7476; 
-  text-decoration: none;
-  padding: 20px;
- }
-
-.arrow {
-  text-align: center;
-  margin: 1% 0;
-  width: 100%;
-}
-.bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
-}
-html {
-  scroll-behavior: smooth;
-}
-
-/*Back to Top Button*/
-#myBtn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 99;
-  border: solid 3px #2E7476;
-  outline: none;
-  background-color: #ffffff93;
-  color: #2E7476;
-  cursor: pointer;
-  padding: 5px;
-  border-radius: 50%;
-  font-size: 25px;
-}
-
-#myBtn:hover {
+.jumbotron h2 {
+  Display: flex;
   background-color: #2E7476;
-  color: #ffffff;
-}
-
-/*My Work Page*/
-#downArrowScroll{
-  padding-top: 100px;
-}
-#workGrid{
-  display: grid;
-  margin: 0px 5%;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
-  grid-template-areas: 
-  "GDRNT CSA"
-  "TOTO graphicDesign"
-  ;
-}
-.categoryGridArea:hover {
-  transform: scale(1.03);
-}
-.categoryGridArea{
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 500px;
-  margin: 30px;
-  display: grid;
-  align-content: end;
-  border-radius: 15px;
-  box-shadow: 4px 4px 10px #00000079;
-  transition: all .2s ease-in-out;
-}
-.categoryGridArea p {
-  text-align: center;
-}
-.categoryGridArea h3 {
-  padding-top: 12px;
-}
-#workGrid .heading{
-  background-color: rgb(255, 255, 255);
-  padding-left: 30px;
-  padding-right: 25px;
-  font-size: 18px;
-  text-align: center;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-.subHeading{
-  text-align: center;
-  margin: 50px auto;
-}
-#GDRNT{
-  grid-area: GDRNT;
-  background-image: url("../images/GDRNT_oldDog.png");
-}
-#CSA{
-  grid-area: CSA;
-  background-image: url("../images/Astronaut.png");
-}
-#TOTO{
-  grid-area: TOTO;
-  background-image: url("../images/DogTraveling2.png");
-}
-#graphicDesign{
-  grid-area: graphicDesign;
-  background-image: url("../images/GraphicDesign.png");
-}
-
-/*About Me Page*/
-#heroImgBottom img{
-  margin-bottom: -30px;
-  width: 75%;
-  max-width: 600px;
-  margin-top: -70px;
-}
-.content{
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
-  padding-top: 100px;
-}
-
-/*My Skills Page*/
-#mySkillsBottom{
-  text-align: center;
-  padding-top: 100px;
-}
-.flexContainerBottom {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  align-content: center;
-  justify-content: space-evenly;
+  color:#E8C9AD;
+  margin: 0px;
   width: 100%;
-  margin-bottom: 100px;
-}
-.flexContainerBottom h3{
-  text-align: left;
-}
-.flexContainerBottom h4 {
-  text-align: left;
-}
-#mySkillsBottom img{
-  max-width: 450px;
-  min-width: 350px;
-}
-
-/*Contact Page*/
-.hireMe{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  align-content: center;
   justify-content: center;
-  width: 100%;
-  margin-bottom: 100px;
-}
-.email {
-  display: flex;
-  float: left;
-  line-height: 20px;
-  padding-right: 10px;
-}
-.material-icons{
-  padding-right: 10px;
-}
-.linkIn {
-  display: flex;
-  float: right;
-}
-.linkIn .fa{
-  color: #2E7476;
-  background: none;
-  line-height: 20px;
-  padding-right: 20px;
+  padding: 0px;
+  height: 100px;
+  align-items: center;
 }
 
 
@@ -427,29 +199,7 @@ footer li {
   color: #1A2F30;
 }
 
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-}
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(360deg);
-    width: 20%;
-  }
-  100% {
-    transform: rotate(720deg); 
-  }
-}
+
 
 /*Media Query*/
 @media only screen and (max-width: 1000px) {
