--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 body{
   font-family: 'Didact Gothic', 'Open Sans', sans-serif;
-  background-image: url("../images/Skills_Background-image.png");
+  background-image: url("../images/About\ Me\ Background.png");
   background-size: 100%;
   background-repeat: repeat-y;
   margin: 0px;
@@ -18,26 +18,24 @@ html {
 p{
   font-size: 20px;
   color: #2E7476;
-  text-align: justify;
+  text-align:left;
 }
 h1{
   font-size: 50px;
-  font-weight: 200px;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   color: rgb(1, 59, 59);
   text-align: center;
 }
 h2{
   font-size: 30px;
-  font-weight: 200px;
   font-family: 'Didact Gothic', 'Open Sans', sans-serif;
   color: rgb(1, 59, 59);
   text-align: center;
+  font-style: initial;
 }
 h3{
   font-size: 35px;
   margin: 15px;
-  font-weight: 200px;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   color: rgb(1, 59, 59);
   text-align: center;
@@ -85,13 +83,13 @@ button{
 }
 
 /*Top Navigation*/
-header {
+.navbar {
   width: 100%;
   height: 70px;
   background-color: #e8c9adb9;
   font-family: 'Yanone Kaffeesatz', sans-serif;
 }
-header ul{
+.navbar ul{
   display: inline-block;
   width: 100%;
   vertical-align: middle;
@@ -99,30 +97,23 @@ header ul{
   margin: none;
 }
 
-header li a:hover{
+.navbar li a:hover{
   background-color: #2E7476;
   color: #E8C9AD;
   background-size:contain;
 }
-header li{
+.navbar li{
   display: inline-block;
   line-height: 70px;
   font-size: 24pt;
 }
-header .floatleft {
-  float:left;
-  padding-left: 80px;
-  padding-top: 12px;
-}
-header .floatright {
-  float:right;
-  padding-right: 60px;
-}
-
-.logo{
+.navbar .img{
   width: 20%;
   padding: 1%;
   text-align: center;
+}
+.navbar-nav{
+  text-align: end;
 }
 /*----------------BODY-----------------*/
 .jumbotron {
@@ -133,7 +124,7 @@ header .floatright {
   margin: 0px !important;
   padding: 0px !important;
 }
-.jumbotron h2 {
+.jumbotron h1 {
   Display: flex;
   background-color: #2E7476 !important;
   color:#E8C9AD !important;
@@ -145,6 +136,16 @@ header .floatright {
   align-items: center;
 }
 
+.intro {
+  outline: solid red 1px;
+}
+
+.row {
+  margin: 40px;
+}
+.introimage{
+  text-align: center;
+}
 
 /*FOOTER*/
 footer {
