--- a/css/index.css
+++ b/css/index.css
@@ -137,17 +137,18 @@ button{
   height: 100px;
   align-items: center;
 }
-
+.container-fluid{
+  padding: 0px;
+}
 .intro {
   outline: solid red 1px;
+  text-align: center;
 }
 
 .row {
   margin: 40px;
 }
-.introimage{
-  text-align: center;
-}
+
 .title{
   display: flex;
   align-items: center;
@@ -157,6 +158,7 @@ button{
   height: 100px;
 }
 .title h1{
+  font-size: 75px;
   color: #E8C9AD;
   margin: 10px;
   padding-top: 8px;
